--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,8 @@
 <link href="/css/style.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
+<link href="/css/social-buttons.css" rel="stylesheet"/>
+
 <!-- github style syntax highlight -->
 <link href="/css/github_pygments.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
 <link href="/css/octicons.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
