--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
     </div>
 </footer>
 
+<script src="/js/social-buttons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
