--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,15 +28,13 @@
                     <meta itemprop="name" content="javers.org"/>
                 </div>
 
-
-
                 {% if page.date  %}
                 <div class="postHeader">
                     <div itemprop="author" itemscope itemtype="https://schema.org/Person">
-                        <b><span style="color:#1F618D;" itemprop="name">{{ page.author }}</span></b>
+                        <span class="postAuthor" itemprop="name">{{ page.author }}</span>
                     </div>
 
-                    <time style="color:#515A5A;" itemprop="datePublished"
+                    <time itemprop="datePublished"
                           datetime="{{ page.date }}">{{ page.date | date: "%b %-d %Y" }}</time>
                 </div>
                 {% endif %}
@@ -46,6 +44,11 @@
                 <div itemprop="articleBody">
                     {{ content }}
                 </div>
+
+            {% if page.category == 'Blog' %}
+            {% include social-buttons.html %}
+            {% endif %}
+
             </div>
 
             {% if page.sidebar-url %}
@@ -58,6 +61,33 @@
         </div>
     </div>
 </section>
+
+{% if page.category == 'Blog' %}
+
+<div class="row">
+    <div id="disqus_thread" class="col-md-8 col-md-offset-2"></div>
+</div>
+<script>
+
+    /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://javers-org.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
 
 {% include footer.html %}
 </body>
