--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,16 @@ pre code {
     margin-top: 5px;
 }
 
+.shareThis {
+    border-top: 1px solid rgba(0,0,0,.09);
+    display: inline-block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top:30px;
+    font-size: 9pt;
+    font-weight: 700;
+}
+
 .blogPost  {
     border-bottom: 1px solid rgba(0,0,0,.09);
     margin-top: 25px;
@@ -54,6 +64,15 @@ pre code {
 .postHeader {
     margin-top: 20px;
     margin-bottom: 5px;
+}
+
+.postAuthor {
+    font-weight: bold;
+    color:#1F618D;
+}
+
+.postHeader time {
+    color:#515A5A;
 }
 
 #main li {
@@ -365,7 +384,7 @@ body.page section header {
 }
 
 body.page section #main {
-    padding-right: 35px;
+    padding-right: 25px;
     padding-bottom: 35px;
     padding-top: 5px;
     font-size: 1.1em;
