--- a/_includes/social-buttons.html
+++ b/_includes/social-buttons.html
@@ -5,7 +5,7 @@
 <div class="social-sharing is-clean" data-permalink="http://labs.carsonshold.com/social-sharing-buttons">
 
     <!-- https://dev.twitter.com/docs/intents -->
-    <a target="_blank" href="https://twitter.com/intent/tweet?url={{site.url}}{{page.url}}&amp;text={{page.title}} by @javers_org"
+    <a target="_blank" href="https://twitter.com/intent/tweet?url={{site.url}}{{page.url}}&amp;text={{page.title}} by @{{ page.authorTwitter }}"
        class="share-twitter">
         <span class="icon icon-twitter" aria-hidden="true"></span>
         <span class="share-title">Tweet</span>
