--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -78,6 +78,11 @@
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
+
+    var disqus_config = function () {
+        this.page.url = '{{site.url}}{{page.url}}';
+    };
+
     (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
         s.src = 'https://javers-org.disqus.com/embed.js';
