--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,12 @@
             <div id="main"
                  {% if page.category == 'Blog' %}class="col-md-8 col-md-offset-2"{% else %}class="col-md-8"{% endif %}
                  itemscope itemtype="http://schema.org/TechArticle">
+
+                {% if page.image  %}
+                <meta itemprop="image" content="{{ site.url }}{{ page.image }}">
+                {% else %}
                 <meta itemprop="image" content="{{ site.url }}/img/logotype.png">
+                {% endif %}
 
                 {% unless page.author %}
                 <div itemprop="author" itemscope itemtype="https://schema.org/Person">
