--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,13 @@
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@javers_org" />
+
 <meta property="og:url" content="https://javers.org/" />
 <meta property="og:title" content="{{ page.title }}{{ titleSuffix }}" />
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
-<meta property="og:image" content="https://javers.org/img/javers-og-image.png" />
+{% if page.image  %}<meta property="og:image" content="{{ site.url }}{{ page.image }}" />
+{% else %} <meta property="og:image" content="https://javers.org/img/javers-og-image.png" />
+{% endif %}
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
