--- a/_includes/fancy-image.html
+++ b/_includes/fancy-image.html
@@ -1,3 +1,19 @@
+<!-- include -->
+{% if include.width %}
+<img class="hidden-sm hidden-xs"
+        src="{{ include.image }}"
+        alt="{{ include.alt }}"
+        width="{{ include.width }}"/>
+
+<a class="visible-sm visible-xs"
+    data-fancybox="gallery"
+    href="{{ include.image }}">
+    <img class="fancy-min" src="{{ include.image }}" alt="{{ include.alt }}"/>
+</a>
+{% else %}
 <a data-fancybox="gallery" href="{{ include.image }}">
     <img class="fancy-min" src="{{ include.image }}" alt="{{ include.alt }}"/>
 </a>
+{% endif %}
+<!-- include end -->
+
