--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -100,11 +100,12 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'domain-configuration' %} hidden {% endif %}">
         <li><a href="#domain-model-mapping">Domain model mapping</a></li>
         <li class="nested"><a href="#entity">Entity</a></li>
+        <li class="nested"><a href="#entity-id">Entity ID</a></li>
         <li class="nested"><a href="#value-object">Value Object</a></li>
         <li class="nested"><a href="#ValueType">Value</a></li>
         <li><a href="#mapping-configuration">Mapping configuration</a></li>
         <li><a href="#supported-annotations">Supported annotations</a></li>
-        <li><a href="#entity-id-property">Entity Id</a></li>
+        <li><a href="#entity-mapping-example">Mapping example</a></li>
         <li><a href="#property-mapping-style">Property mapping style</a></li>
         <li><a href="#ignoring-things">Ignoring things</a></li>
         <li><a href="#hooks">Object hooks</a></li>
