--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -32,8 +32,8 @@
     </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'diff-examples' %} hidden {% endif %}">
         <li><a href="#compare-entities">Compare Entities</a></li>
-        <li><a href="#compare-valueobjects">Compare Value Objects</a></li>
         <li><a href="#compare-graphs">Compare graphs</a></li>
+        <li><a href="#compare-valueobjects">Compare top-level Value Objects</a></li>
         <li><a href="#compare-collections">Compare top-level collections</a></li>
         <li><a href="#groovy-diff-example">Groovy diff example</a></li>
     </ul>
