--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -44,9 +44,7 @@
             Examples &mdash; Repository
     </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'repository-examples' %} hidden {% endif %}">
-        <li><a href="#commit-changes">Commit changes</a></li>
-        <li><a href="#read-snapshots-history">Read snapshots history</a></li>
-        <li><a href="#read-changes-history">Read changes history</a></li>
+        <li><a href="#commit-changes">Commit and query</a></li>
         <li><a href="#change-log">Change log</a></li>
         <li><a href="#json-type-adapter">JSON TypeAdapter</a></li>
     </ul>
