--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="/">
                 <img alt="JaVers logo" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
             </a>
-            <a class="logo-version" href="https://search.maven.org/#artifactdetails%7Corg.javers%7Cjavers-core%7C{{site.javers_current_version}}%7C" >
+            <a class="logo-version" href="https://search.maven.org/search?q=g:org.javers" >
                 {{site.javers_current_version}}
             </a>
         </div>
