--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -36,6 +36,7 @@
         <li><a href="#compare-valueobjects">Compare top-level Value Objects</a></li>
         <li><a href="#compare-collections">Compare top-level collections</a></li>
         <li><a href="#groovy-diff-example">Groovy diff example</a></li>
+        <li><a href="#custom-comparators-example">Custom comparators example</a></li>
     </ul>
 </section>
 
