--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 <footer>
     <div class="container">
         <div class="row">
-            <p class="col-md-12">
-                <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/><br/>
+            <p class="col-md-12" style="color: black">
+                <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
+                <br/>
+                Open source Java library, available under
+                <a href="https://www.apache.org/licenses/LICENSE-2.0">
+                    Apache License
+                </a>
+                <br/>
             </p>
         </div>
     </div>
