--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <p class="col-md-12" style="color: black">
                 <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
                 <br/>
-                Open source Java library, available under
+                Open source Java library available under
                 <a href="https://www.apache.org/licenses/LICENSE-2.0">
                     Apache License
                 </a>
