--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <link href="/css/style.css?timestamp={{ site.time | date: '%s' }}" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 <link href="/css/social-buttons.css" rel="stylesheet"/>
