--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,17 @@ pre.highlight > code {
     display: block;
 }
 
+.alert {
+    padding: 20px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #2874a6;
+    color: #154360;
+    margin-bottom: 15px;
+    font-size: 1em;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .fancy-min {
     width: auto;
     max-width: 100%;
