--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,3 +47,15 @@
     ga('send', 'pageview');
 
 </script>
+
+
+<script>
+    var fullPage = window.location.toString().indexOf('fullPage') !== -1;
+    var showCloseButton = window.location.toString().indexOf('showCloseButton') !== -1;
+
+    var DIGITAL_CLIMATE_STRIKE_OPTIONS = {
+        forceFullPageWidget: fullPage,
+        showCloseButtonOnFullPageWidget: showCloseButton
+    };
+</script>
+<script src="https://assets.digitalclimatestrike.net/widget.js" async></script>
