--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
 
 <script>
     var fullPage = window.location.toString().indexOf('fullPage') !== -1;
-    var showCloseButton = window.location.toString().indexOf('showCloseButton') !== -1;
+    var showCloseButton = 1;
 
     var DIGITAL_CLIMATE_STRIKE_OPTIONS = {
         forceFullPageWidget: fullPage,
