--- a/_includes/sponsorship-alert.html
+++ b/_includes/sponsorship-alert.html
@@ -4,7 +4,7 @@
         JaVers needs funding to sustain. You can
         <a href="/sponsorship">sponsor
         JaVers development easily</a>
-        via Open Collective.
+        via GitHub Sponsors or Open Collective.
     </div>
 
 </div>
