--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -36,7 +36,8 @@
         <li><a href="#compare-valueobjects">Compare top-level Value Objects</a></li>
         <li><a href="#compare-collections">Compare top-level collections</a></li>
         <li><a href="#groovy-diff-example">Groovy diff example</a></li>
-        <li><a href="#custom-comparators-example">Custom comparators example</a></li>
+        <li><a href="#custom-value-comparator-example">Custom Value comparator</a></li>
+        <li><a href="#custom-property-comparator-example">Custom Property comparator</a></li>
     </ul>
 </section>
 
@@ -132,6 +133,8 @@
         <li><a href="#simple-vs-levenshtein">&nbsp; &nbsp;Simple vs Levenshtein algorithm</a></li>
         <li><a href="#more-about-levenshtein">&nbsp; &nbsp;More about Levenshtein distance</a></li>
         <li><a href="#custom-comparators">Custom comparators</a></li>
+        <li><a href="#custom-value-comparators">&nbsp; &nbsp;Custom Value comparators</a></li>
+        <li><a href="#custom-property-comparators">&nbsp; &nbsp;Custom Property comparators</a></li>
     </ul>
 </section>
 
