Typo: commis -> commits

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -175,7 +175,7 @@
         <li><a href="#starter-repository-configuration">JaversRepository configuration</a></li>
         <li><a href="#starter-boot">Boot it!</a></li>
         <li><a href="#boot-Auto-audit">&nbsp; &nbsp;Auto-audit annotations</a></li>
-        <li><a href="#boot-manual-commis">&nbsp; &nbsp;Manual commis</a></li>
+        <li><a href="#boot-manual-commits">&nbsp; &nbsp;Manual commits</a></li>
         <li><a href="#boot-querying">&nbsp; &nbsp;Querying JaversRepository</a></li>
         <li><a href="#starter-demo-app">Demo application</a></li>
     </ul>
