--- a/_includes/sponsorship-alert.html
+++ b/_includes/sponsorship-alert.html
@@ -2,8 +2,8 @@
 
     <div class="alert">
         JaVers needs funding to sustain. You can
-        <a href="/sponsorship">sponsor
-        JaVers development easily</a>
+        <a href="/sponsorship">sponsor</a>
+        JaVers development easily
         via GitHub Sponsors or Open Collective.
     </div>
 
