--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -48,7 +48,6 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'repository-examples' %} hidden {% endif %}">
         <li><a href="#commit-changes">Commit and query</a></li>
         <li><a href="#change-log">Changelog</a></li>
-        <li><a href="#json-type-adapter">JSON TypeAdapter</a></li>
     </ul>
 </section>
 
@@ -121,7 +120,8 @@
         <li><a href="#sql-databases">SQL databases</a></li>
         <li><a href="#connection-provider">&nbsp; &nbsp;ConnectionProvider</a></li>
         <li><a href="#custom-json-serialization">Custom JSON serialization</a>
-        <li><a href="#json-type-adapters">JSON TypeAdapters</a>
+        <li><a href="#json-type-adapters">&nbsp; &nbsp;JSON TypeAdapters</a>
+        <li><a href="#json-type-adapter-example">&nbsp; &nbsp;JSON TypeAdapter Example</a>
     </ul>
 </section>
 
