--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -171,6 +171,7 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-boot-integration' %} hidden {% endif %}">
         <li><a href="#get-javers-starters">Get JaVers starter</a></li>
         <li><a href="#javers-configuration-properties">JaVers configuration</a></li>
+        <li><a href="#registering-json-type-adapters">&nbsp; &nbsp; Registering JSON TypeAdapters</a>
         <li><a href="#starters-auto-configuration">Spring AutoConfiguration</a></li>
         <li><a href="#starter-repository-configuration">JaversRepository configuration</a></li>
         <li><a href="#starter-boot">Boot it!</a></li>
