--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -142,7 +142,7 @@
     <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">
     Spring integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
-        <li><a href="#auto-audit-aspect">Auto-audit</a></li>
+        <li><a href="#auto-audit-aspect">Auto-audit aspect</a></li>
 
         <li class="nested">beans:
             <a href="#javers-instance-as-a-bean">JaVers</a>,
