--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -142,17 +142,20 @@
     <a {% if currentSubPage == 'spring-integration' %}class='active'{% endif %} href="/documentation/spring-integration">
     Spring integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
-        <li><a href="#auto-audit-aspect">Auto-audit aspect</a></li>
+        <li><a href="#auto-audit-aspect">Auto-audit aspects</a></li>
 
-        <li class="nested">beans:
+        <li class="nested"><a href="#javers-spring-annotations">Annotations</a>:
+            <a href="#at-javers-spring-data-auditable">@JaversSpringDataAuditable</a>
+            <a href="#at-javers-auditable">@JaversAuditable</a>
+            <a href="#at-auditable-delete">@JaversAuditableDelete</a>
+            <a href="#at-javers-auditable-conditional-delete">@JaversAuditableConditionalDelete</a>
+        </li>
+
+        <li class="nested">Beans:
             <a href="#javers-instance-as-a-bean">JaVers</a>,
             <a href="#javers-auto-audit-aspects">Aspect beans,</a>
             <a href="#author-provider-bean">AuthorProvider</a>,
             <a href="#commit-properties-provider-bean">CommitPropertiesProvider</a>
-        </li>
-        <li class="nested">annotations:
-            <a href="#at-javers-spring-data-auditable">@JaversSpringDataAuditable</a>
-            <a href="#at-javers-auditable">@JaversAuditable</a>
         </li>
 
 
