--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -144,14 +144,12 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
         <li><a href="#auto-audit-aspect">Auto-audit aspects</a></li>
 
-        <li class="nested"><a href="#javers-spring-annotations">Annotations</a>:
+        <li class="nested"><a href="#javers-spring-annotations">Annotations</a>:<br/>
             <a href="#at-javers-spring-data-auditable">@JaversSpringDataAuditable</a>
-            <a href="#at-javers-auditable">@JaversAuditable</a>
-            <a href="#at-auditable-delete">@JaversAuditableDelete</a>
-            <a href="#at-javers-auditable-conditional-delete">@JaversAuditableConditionalDelete</a>
+            <a href="#at-javers-auditable">@JaversAuditable family</a>
         </li>
 
-        <li class="nested">Beans:
+        <li class="nested"><a href="#javers-beans">Beans</a>:<br/>
             <a href="#javers-instance-as-a-bean">JaVers</a>,
             <a href="#javers-auto-audit-aspects">Aspect beans,</a>
             <a href="#author-provider-bean">AuthorProvider</a>,
