--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -144,25 +144,18 @@
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-integration' %} hidden {% endif %}">
         <li><a href="#auto-audit-aspect">Auto-audit aspects</a></li>
 
-        <li class="nested"><a href="#javers-spring-annotations">Annotations</a>:<br/>
-            <a href="#at-javers-spring-data-auditable">@JaversSpringDataAuditable</a>
-            <a href="#at-javers-auditable">@JaversAuditable family</a>
+        <li class="nested"><a href="#javers-spring-annotations">Annotations</a>
         </li>
-
-        <li class="nested"><a href="#javers-beans">Beans</a>:<br/>
-            <a href="#javers-instance-as-a-bean">JaVers</a>,
-            <a href="#javers-auto-audit-aspects">Aspect beans,</a>
-            <a href="#author-provider-bean">AuthorProvider</a>,
-            <a href="#commit-properties-provider-bean">CommitPropertiesProvider</a>
-        </li>
-
 
         <li><a href="#jpa-entity-manager-integration">JPA EntityManager integration</a></li>
-        <li><a href="#spring-configuration-for-transactional-javers">&nbsp; &nbsp;Spring configuration for SQL</a></li>
-        <li><a href="#hibernate-unproxy-hook">&nbsp; &nbsp;Hibernate unproxy hook</a></li>
+        <li class="nested"><a href="#spring-configuration-for-transactional-javers">Spring configuration for SQL</a></li>
+        <li class="nested"><a href="#hibernate-unproxy-hook">Hibernate unproxy hook</a></li>
 
-        <li><a href="#spring-jpa-example">Configuration example for JPA</a></li>
-        <li><a href="#auto-audit-example-mongo">Configuration example for MongoDB</a></li>
+        <li class="nested"><a href="#javers-beans">Javers Spring Beans</a></li>
+
+        <li>Configuration examples:</li>
+        <li class="nested"><a href="#spring-jpa-example">for JPA</a></li>
+        <li class="nested"><a href="#auto-audit-example-mongo">for MongoDB</a></li>
     </ul>
 </section>
 
