--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -151,11 +151,11 @@
         <li class="nested"><a href="#spring-configuration-for-transactional-javers">Spring configuration for SQL</a></li>
         <li class="nested"><a href="#hibernate-unproxy-hook">Hibernate unproxy hook</a></li>
 
-        <li class="nested"><a href="#javers-beans">Javers Spring Beans</a></li>
+        <li><a href="#javers-beans">Javers Spring Beans</a></li>
 
-        <li>Configuration examples:</li>
-        <li class="nested"><a href="#spring-jpa-example">for JPA</a></li>
-        <li class="nested"><a href="#auto-audit-example-mongo">for MongoDB</a></li>
+        <li>Configuration examples for:</li>
+        <li class="nested"><a href="#spring-jpa-example">JPA & Hibernate</a></li>
+        <li class="nested"><a href="#auto-audit-example-mongo">MongoDB</a></li>
     </ul>
 </section>
 
