--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -153,9 +153,9 @@
 
         <li><a href="#javers-beans">Javers Spring Beans</a></li>
 
-        <li>Configuration examples for:</li>
-        <li class="nested"><a href="#spring-jpa-example">JPA & Hibernate</a></li>
-        <li class="nested"><a href="#auto-audit-example-mongo">MongoDB</a></li>
+        <li><a href="#spring-jpa-example">Configuration example for JPA</a></li>
+        <li><a href="#auto-audit-example-mongo">Configuration example for MongoDB</a></li>
+
     </ul>
 </section>
 
