--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -149,7 +149,7 @@
         <li class="nested"><a href="#auto-audit-aspects-spring-configuration">Spring Configuration</a></li>
 
         <li><a href="#jpa-entity-manager-integration">JPA EntityManager integration</a></li>
-        <li class="nested"><a href="#spring-configuration-for-transactional-javers">Spring configuration for SQL</a></li>
+        <li class="nested"><a href="#spring-configuration-for-transactional-javers">Spring configuration for JPA</a></li>
         <li class="nested"><a href="#hibernate-unproxy-hook">Hibernate unproxy hook</a></li>
 
         <li><a href="#javers-beans">Javers Spring Beans</a></li>
