--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -152,6 +152,8 @@
         <li class="nested"><a href="#spring-configuration-for-transactional-javers">Spring configuration for JPA</a></li>
         <li class="nested"><a href="#hibernate-unproxy-hook">Hibernate unproxy hook</a></li>
 
+        <li><a href="#mongo-transactions">MongoDB transactions support</a></li>
+
         <li><a href="#spring-jpa-example">Configuration example for JPA</a></li>
         <li><a href="#auto-audit-example-mongo">Configuration example for MongoDB</a></li>
 
