--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer>
-    <div class="container" style="margin-top: 100px;">
+<footer style="margin-top: 100px;>
+    <div class="container>
         <div class="row">
             <p class="col-md-12" style="color: black">
                 <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
