--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-<footer style="margin-top: 100px;>
-    <div class="container>
+    <div class="container" style="margin-top: 100px;>
         <div class="row">
             <p class="col-md-12" style="color: black">
                 <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
@@ -12,7 +11,6 @@
             </p>
         </div>
     </div>
-</footer>
 
 <script src="/js/social-buttons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
