--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-    <div class="container" style="margin-top: 100px;>
+    <div class="container" style="margin-top: 150px; text-align: center;>
         <div class="row">
             <p class="col-md-12" style="color: black">
-                <img alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
+                <img width="100px" alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
                 <br/>
                 Open source Java library available under
                 <a href="https://www.apache.org/licenses/LICENSE-2.0">
