--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
     <div class="container"
-         style="margin-top: 150px; text-align: center; padding-right: 200px">
+         style="margin-top: 150px; text-align: center;">
         <div class="row">
             <p class="col-md-12" style="color: black">
                 <img width="100px" alt="JaVers logo small" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
