--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -163,10 +163,16 @@
     Spring Boot integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-boot-integration' %} hidden {% endif %}">
         <li><a href="#get-javers-starters">Get JaVers starter</a></li>
-        <li><a href="#javers-configuration-properties">JaVers configuration</a></li>
+
+        <li><a href="#starters-auto-configuration">Spring Boot Auto-configuration</a></li>
+        <li><a href="#customizing-auto-configuration">Customizing the Auto-configuration</a></li>
+
+        <li><a href="#javers-configuration-properties">&nbsp; &nbsp; JaVers Core configuration</a></li>
+        <li><a href="#AuthorProvider-and-CommitPropertiesProvider">&nbsp; &nbsp; AuthorProvider and CommitPropertiesProvider</a></li>
+
+        <li><a href="#starter-repository-configuration">&nbsp; &nbsp; JaversRepository configuration</a></li>
         <li><a href="#registering-json-type-adapters">&nbsp; &nbsp; Registering JSON TypeAdapters</a>
-        <li><a href="#starters-auto-configuration">Spring AutoConfiguration</a></li>
-        <li><a href="#starter-repository-configuration">JaversRepository configuration</a></li>
+
         <li><a href="#starter-boot">Boot it!</a></li>
         <li><a href="#boot-Auto-audit">&nbsp; &nbsp;Auto-audit annotations</a></li>
         <li><a href="#boot-manual-commits">&nbsp; &nbsp;Manual commits</a></li>
