--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -168,7 +168,7 @@
         <li><a href="#customizing-auto-configuration">Customizing the Auto-configuration</a></li>
 
         <li><a href="#javers-configuration-properties">&nbsp; &nbsp; JaVers Core configuration</a></li>
-        <li><a href="#AuthorProvider-and-CommitPropertiesProvider">&nbsp; &nbsp; AuthorProvider and CommitPropertiesProvider</a></li>
+        <li><a href="#AuthorProvider-and-CommitPropertiesProvider">&nbsp; &nbsp; AuthorProvider, CommitPropertiesProvider</a></li>
 
         <li><a href="#starter-repository-configuration">&nbsp; &nbsp; JaversRepository configuration</a></li>
         <li><a href="#registering-json-type-adapters">&nbsp; &nbsp; Registering JSON TypeAdapters</a>
