--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -162,7 +162,7 @@
     <a {% if currentSubPage == 'spring-boot-integration' %}class='active'{% endif %} href="/documentation/spring-boot-integration">
     Spring Boot integration</a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'spring-boot-integration' %} hidden {% endif %}">
-        <li><a href="#get-javers-starters">Get JaVers starter</a></li>
+        <li><a href="#get-javers-starters">Get a Javers starter</a></li>
 
         <li><a href="#starters-auto-configuration">Spring Boot Auto-configuration</a></li>
         <li><a href="#customizing-auto-configuration">Customizing the Auto-configuration</a></li>
