--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -167,7 +167,7 @@
         <li><a href="#starters-auto-configuration">Spring Boot Auto-configuration</a></li>
         <li><a href="#customizing-auto-configuration">Customizing the Auto-configuration</a></li>
 
-        <li><a href="#javers-configuration-properties">&nbsp; &nbsp; JaVers Core configuration</a></li>
+        <li><a href="#javers-configuration-properties">&nbsp; &nbsp; Javers Core configuration</a></li>
         <li><a href="#AuthorProvider-and-CommitPropertiesProvider">&nbsp; &nbsp; AuthorProvider, CommitPropertiesProvider</a></li>
 
         <li><a href="#Javers-SQL-Repository">&nbsp; &nbsp; SQL Repository</a></li>
