SNOW-XXXXX Your title here
Description

Testing

--- a/_includes/sponsorship-alert.html
+++ b/_includes/sponsorship-alert.html
@@ -3,7 +3,7 @@
     <div class="alert">
         JaVers needs funding to sustain. You can
         <a href="/sponsorship">sponsor</a>
-        JaVers development easily
+        JaVers development
         via GitHub Sponsors or Open Collective.
     </div>
 
