--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand" href="/">
                 <img alt="JaVers logo" src="/img/logotype.svg?timestamp={{ site.time | date: '%s' }}"/>
             </a>
-            <a class="logo-version" href="https://search.maven.org/search?q=g:org.javers" >
+            <a class="logo-version" href="https://central.sonatype.com/artifact/org.javers/javers-core/{{site.javers_current_version}}/versions" >
                 {{site.javers_current_version}}
             </a>
         </div>
