--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,10 @@
 {% else %} <meta property="og:image" content="https://javers.org/img/javers-og-image.png" />
 {% endif %}
 
+<!-- add sense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3882006986722183"
+     crossorigin="anonymous"></script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
