getting-started updates

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -19,10 +19,13 @@
             Getting Started
     </a>
     <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'getting-started' %} hidden {% endif %}">
-        <li><a href="#get-javers">Get JaVers</a></li>
-        <li><a href="#create-javers-instance">Create JaVers instance</a></li>
-        <li class="nested"><a href="#getting-started-diff">Object diff</a></li>
-        <li class="nested"><a href="#getting-started-audit">Object audit</a></li>
+        <li><a href="#getting-started-boot">Spring Boot Starters</a></li>
+        <li><a href="#getting-started-Tutorials">Tutorials and Articles</a></li>
+        <li><a href="#vanilla-javers">Vanilla Javers</a></li>
+        <li><a href="#getting-started-diff">Object diff</a></li>
+        <li><a href="#getting-started-audit">Data audit</a></li>
+        <li><a href="#getting-started-auto-audit">Auto audit aspects</a></li>
+
     </ul>
 </section>
 
