getting-started updates

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -24,7 +24,7 @@
         <li><a href="#vanilla-javers">Vanilla Javers</a></li>
         <li><a href="#getting-started-diff">Object diff</a></li>
         <li><a href="#getting-started-audit">Data audit</a></li>
-        <li><a href="#getting-started-auto-audit">Auto audit aspects</a></li>
+        <li><a href="#getting-started-auto-audit">Auto-audit aspects</a></li>
 
     </ul>
 </section>
