--- a/_includes/features-sidebar.html
+++ b/_includes/features-sidebar.html
@@ -7,8 +7,13 @@
     Features overview
   </a>
   <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
-    <li><a href="#object-diff">Object diff</a></li>
-    <li><a href="#javers-repository">Javers Repository</a></li>
-    <li><a href="#json-serialization">JSON Serialization</a></li>
+    <li><a href="#data-audit">Data audit</a></li>
+
+      <li><a class="nested" href="#database-Independent-Audit-Model">Database-Independent Audit Model</a></li>
+      <li><a class="nested" href="#Advanced-Domain-Modeling">Advanced Domain Modeling</a></li>
+      <li><a class="nested" href="#jql">JaVers Query Language (JQL)</a></li>
+      <li><a class="nested" href="#spring-integration">Spring and Spring Boot Integration</a></li>
+
+      <li><a href="#object-diff">Object diff</a></li>
   </ul>
 </section>
