--- a/_includes/features-sidebar.html
+++ b/_includes/features-sidebar.html
@@ -9,10 +9,10 @@
   <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
     <li><a href="#data-audit">Data audit</a></li>
 
-      <li><a class="nested" href="#database-Independent-Audit-Model">Database-Independent Audit Model</a></li>
-      <li><a class="nested" href="#Advanced-Domain-Modeling">Advanced Domain Modeling</a></li>
-      <li><a class="nested" href="#jql">JaVers Query Language (JQL)</a></li>
-      <li><a class="nested" href="#spring-integration">Spring and Spring Boot Integration</a></li>
+      <li class="nested"><a href="#database-Independent-Audit-Model">Database-Independent Audit Model</a></li>
+      <li class="nested"><a href="#Advanced-Domain-Modeling">Advanced Domain Modeling</a></li>
+      <li class="nested"><a href="#jql">JaVers Query Language (JQL)</a></li>
+      <li class="nested"><a href="#spring-integration">Spring and Spring Boot Integration</a></li>
 
       <li><a href="#object-diff">Object diff</a></li>
   </ul>
