--- a/_includes/features-sidebar.html
+++ b/_includes/features-sidebar.html
@@ -12,7 +12,10 @@
       <li class="nested"><a href="#database-Independent-Audit-Model">Database-Independent Audit Model</a></li>
       <li class="nested"><a href="#Advanced-Domain-Modeling">Advanced Domain Modeling</a></li>
       <li class="nested"><a href="#jql">JaVers Query Language (JQL)</a></li>
+      <li class="nested"><a href="#Customizable-Diff">Customizable Diff Logic</a></li>
+
       <li class="nested"><a href="#spring-integration">Spring and Spring Boot Integration</a></li>
+      <li class="nested"><a href="#How-to-use-JaVers-Data-Audit">How to use JaVers Data Audit</a></li>
 
       <li><a href="#object-diff">Object diff</a></li>
   </ul>
