--- a/_includes/features-sidebar.html
+++ b/_includes/features-sidebar.html
@@ -7,14 +7,17 @@
     Features overview
   </a>
   <ul class="nav nav-stacked list-unstyled {% if page.submenu != 'features' %} hidden {% endif %}">
-      <li><a href="#object-diff">Object diff</a></li>
+      <li><a href="#object-diff">Object Diff</a></li>
 
-      <li><a href="#data-audit">Data audit</a></li>
+      <li><a href="#data-audit">Data Audit</a></li>
         <li class="nested"><a href="#database-Independent-Audit-Model">Database-Independent Audit Model</a></li>
         <li class="nested"><a href="#Advanced-Domain-Modeling">Advanced Domain Modeling</a></li>
         <li class="nested"><a href="#jql">JaVers Query Language (JQL)</a></li>
         <li class="nested"><a href="#spring-integration">Spring and Spring Boot Integration</a></li>
-        <li class="nested"><a href="#How-to-use-JaVers-Data-Audit">How to use JaVers Data Audit</a></li>
+
+      <li><a href="#How-to-use-JaVers">How to use JaVers</a></li>
+        <li class="nested"><a href="#How-to-use-JaVers-Data-Audit">How to use Object Diff</a></li>
+        <li class="nested"><a href="#How-to-use-JaVers-Object-Diff">How to use Data Audit</a></li>
 
   </ul>
 </section>
