--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -188,3 +188,8 @@
     </ul>
 
 </section>
+
+<section>
+    <a  href="/blog/2017/12/javers-vs-envers-comparision.html">
+        JaVers Vs Envers Comparision </a>
+</section>
