--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -51,6 +51,7 @@
                         <li><a href="/documentation/diff-configuration/">Configuration &mdash; Diff</a></li>
                         <li><a href="/documentation/spring-integration/">Spring integration</a></li>
                         <li><a href="/documentation/spring-boot-integration/">Spring Boot integration</a></li>
+                        <li><a  href="/blog/2017/12/javers-vs-envers-comparision.html">JaVers Vs Envers Comparision </a></li>
                     </ul>
                 </li>
 
