--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -51,13 +51,18 @@
                         <li><a href="/documentation/diff-configuration/">Configuration &mdash; Diff</a></li>
                         <li><a href="/documentation/spring-integration/">Spring integration</a></li>
                         <li><a href="/documentation/spring-boot-integration/">Spring Boot integration</a></li>
-                        <li><a  href="/blog/2017/12/javers-vs-envers-comparision.html">JaVers Vs Envers Comparision </a></li>
+                        <li><a href="/blog/2017/12/javers-vs-envers-comparision.html">JaVers Vs Envers Comparison</a></li>
                     </ul>
                 </li>
 
                 <li {% if page.url contains '/release-notes' %}class='active'{% endif %}>
                     <a href="/release-notes">Release notes</a>
                 </li>
+
+                <li {% if page.url contains '/contact-us' %}class='active'{% endif %}>
+                <a href="/release-notes">Contact Us</a>
+                </li>
+
             </ul>
         </div>
     </div>
