--- a/_includes/sponsorship-alert.html
+++ b/_includes/sponsorship-alert.html
@@ -1,10 +1,13 @@
 <div style="padding-top: 12px; color:red;">
 
     <div class="alert">
-        JaVers needs funding to sustain. You can
-        <a href="/sponsorship">sponsor</a>
-        JaVers development
-        via GitHub Sponsors or Open Collective.
+
+        Whether you are a long-time user or just getting started with data auditing, we want to hear from you.
+        Javers is evolving toward an **Open Core** model and will be offering **Professional Support** soon.
+        Your insights are more valuable than ever.
+        <br/>
+        <a href="/contact-us">Contact us</a>.
+
     </div>
 
 </div>
