--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -60,7 +60,7 @@
                 </li>
 
                 <li {% if page.url contains '/contact-us' %}class='active'{% endif %}>
-                <a href="/release-notes">Contact Us</a>
+                <a href="/contact-us">Contact Us</a>
                 </li>
 
             </ul>
