contact us fixes

--- a/_includes/sponsorship-alert.html
+++ b/_includes/sponsorship-alert.html
@@ -3,7 +3,7 @@
     <div class="alert">
 
         Whether you are a long-time user or just getting started with data auditing, we want to hear from you.
-        Javers is evolving toward an **Open Core** model and will be offering **Professional Support** soon.
+        Javers is evolving toward an <b>Open Core</b> model and will be offering <b>Professional Support<b> soon.
         Your insights are more valuable than ever.
         <br/>
         <a href="/contact-us">Contact us</a>.
