--- a/css/waiting-list-form.css
+++ b/css/waiting-list-form.css
@@ -1,3 +1,10 @@
+
+
+    #mlb2-36704342 input:user-invalid {
+      border-color: #d93025 !important;
+      box-shadow: 0 0 0 2px rgba(217,48,37,0.15);
+    }
+
    .privacy_policy_div p {
         font-size: 0.75em;
         text-align: left;
